--- a/index.html
+++ b/index.html
@@ -3,285 +3,205 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sayfa Sayfa</title>
+<title>Okuma Ritüeli</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin:0; padding:0;
-    transition: background 0.3s, color 0.3s;
-  }
+    body {
+        font-family: 'Segoe UI', sans-serif;
+        margin: 0;
+        display: flex;
+        background: #f4f1ea;
+    }
 
-  /* Karanlık tema */
-  body.dark {
-    background: #121212;
-    color: #fff;
-  }
+    /* Sidebar */
+    .sidebar {
+        width: 220px;
+        background: #f8efe4;
+        padding: 20px;
+        box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    }
+    .sidebar h3 {
+        font-size: 18px;
+        margin-bottom: 15px;
+        border-bottom: 2px solid #d4b483;
+        padding-bottom: 5px;
+    }
+    .sidebar ul {
+        list-style: none;
+        padding: 0;
+    }
+    .sidebar ul li {
+        margin: 10px 0;
+        cursor: pointer;
+        padding: 5px;
+        border-radius: 5px;
+    }
+    .sidebar ul li:hover {
+        background: #e6d3b3;
+    }
 
-  header {
-    padding: 1rem;
-    background: #4a90e2;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    /* Main Content */
+    .main {
+        flex: 1;
+        padding: 20px;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .title {
+        font-family: 'Georgia', serif;
+        font-size: 36px;
+        font-weight: bold;
+        color: #5a4634;
+    }
+    .add-btn {
+        background: #d4b483;
+        border: none;
+        padding: 8px 14px;
+        font-size: 20px;
+        cursor: pointer;
+        border-radius: 50%;
+        font-weight: bold;
+    }
+    .add-btn:hover {
+        background: #c49a6c;
+    }
 
-  /* Animasyonlu Sayfa Sayfa başlığı */
-  #animated-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  #animated-title span {
-    display: inline-block;
-    transform: translateY(100%);
-    animation: slide 0.5s forwards;
-  }
-  #animated-title span:nth-child(1) { animation-delay: 0s; }
-  #animated-title span:nth-child(2) { animation-delay: 0.1s; }
-  #animated-title span:nth-child(3) { animation-delay: 0.2s; }
-  #animated-title span:nth-child(4) { animation-delay: 0.3s; }
-  #animated-title span:nth-child(5) { animation-delay: 0.4s; }
-  #animated-title span:nth-child(6) { animation-delay: 0.5s; }
-  #animated-title span:nth-child(7) { animation-delay: 0.6s; }
-  #animated-title span:nth-child(8) { animation-delay: 0.7s; }
-  #animated-title span:nth-child(9) { animation-delay: 0.8s; }
-  #animated-title span:nth-child(10){ animation-delay: 0.9s; }
+    /* Books grid */
+    .books {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .book-card {
+        background: #fffef9;
+        border: 1px solid #e0d6c3;
+        border-radius: 10px;
+        padding: 15px;
+        box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
+        text-align: center;
+    }
+    .book-card img {
+        max-width: 100%;
+        border-radius: 8px;
+    }
+    .book-card h4 {
+        margin-top: 10px;
+        font-size: 16px;
+        color: #5a4634;
+    }
 
-  @keyframes slide {
-    to { transform: translateY(0); }
-  }
+    /* Footer */
+    footer {
+        background: #f8efe4;
+        padding: 15px;
+        text-align: center;
+        font-size: 14px;
+        color: #5a4634;
+        border-top: 1px solid #d4b483;
+    }
 
-  /* Arama kutusu + + butonu */
-  #search-container {
-    display: flex;
-    align-items: center;
-  }
-
-  #search-input {
-    padding: 4px 8px;
-    font-size: 0.9rem;
-    margin-right: 8px;
-  }
-
-  #add-btn {
-    padding: 4px 8px;
-    cursor: pointer;
-  }
-
-  /* Dinamik kategori başlığı */
-  #category-title {
-    text-align: center;
-    font-size: 1.2rem;
-    margin: 10px 0;
-    font-weight: bold;
-  }
-
-  #book-list {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem;
-    gap: 10px;
-    justify-content: center;
-  }
-
-  .book-card {
-    width: 150px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: transform 0.2s;
-    background: white;
-    text-align: center;
-  }
-
-  .book-card:hover {
-    transform: scale(1.05);
-  }
-
-  body.dark .book-card {
-    background: #1e1e1e;
-    border-color: #555;
-  }
-
-  /* Modal */
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    left:0; top:0;
-    width:100%; height:100%;
-    background: rgba(0,0,0,0.6);
-    justify-content: center;
-    align-items: center;
-  }
-
-  .modal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 400px;
-    width: 90%;
-    text-align: center;
-  }
-
-  body.dark .modal-content {
-    background: #222;
-    color: #fff;
-  }
-
-  .star {
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: gray;
-  }
-
-  .star.active {
-    color: gold;
-  }
-
-  /* Tema butonu */
-  #theme-btn {
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    padding: 8px;
-    cursor: pointer;
-    border-radius: 50%;
-    background: #4a90e2;
-    color: white;
-  }
+    /* Popup Form */
+    .popup {
+        display: none;
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(0,0,0,0.4);
+        justify-content: center;
+        align-items: center;
+    }
+    .popup-content {
+        background: white;
+        padding: 20px;
+        border-radius: 10px;
+        width: 300px;
+    }
+    .popup-content input {
+        width: 100%;
+        padding: 8px;
+        margin: 5px 0 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .popup-content button {
+        background: #d4b483;
+        border: none;
+        padding: 8px 12px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    .popup-content button:hover {
+        background: #c49a6c;
+    }
 </style>
 </head>
 <body>
 
-<header>
-  <div id="animated-title">
-    <span>S</span><span>a</span><span>y</span><span>f</span><span>a</span> 
-    <span>S</span><span>a</span><span>y</span><span>f</span><span>a</span>
-  </div>
-  <div id="search-container">
-    <input type="text" id="search-input" placeholder="Ara...">
-    <button id="add-btn">+</button>
-  </div>
-</header>
-
-<!-- Dinamik kategori başlığı -->
-<div id="category-title">Tüm Kitaplar</div>
-
-<div id="book-list"></div>
-
-<!-- Modal -->
-<div id="book-modal" class="modal">
-  <div class="modal-content">
-    <h2 id="modal-title"></h2>
-    <p id="modal-author"></p>
-    <p id="modal-desc"></p>
-    <div id="modal-stars">
-      <span class="star" data-star="1">&#9733;</span>
-      <span class="star" data-star="2">&#9733;</span>
-      <span class="star" data-star="3">&#9733;</span>
-      <span class="star" data-star="4">&#9733;</span>
-      <span class="star" data-star="5">&#9733;</span>
-    </div>
-    <button id="close-modal">Kapat</button>
-  </div>
+<!-- Sidebar -->
+<div class="sidebar">
+    <h3>Kategoriler</h3>
+    <ul>
+        <li>📚 Felsefe Rafı</li>
+        <li>📖 Edebiyat Dünyası</li>
+        <li>🌏 Dünya Klasikleri</li>
+        <li>💡 Kişisel Gelişim</li>
+    </ul>
 </div>
 
-<!-- Tema Butonu -->
-<button id="theme-btn">🌓</button>
+<!-- Main Content -->
+<div class="main">
+    <div class="header">
+        <div class="title">Okuma Ritüeli</div>
+        <button class="add-btn" onclick="openPopup()">+</button>
+    </div>
+
+    <!-- Books Grid -->
+    <div class="books" id="bookList">
+        <div class="book-card">
+            <img src="https://via.placeholder.com/150x200" alt="Kitap">
+            <h4>Örnek Kitap</h4>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer>
+    📌 Öneri: Her gün 20 sayfa okuyarak küçük bir adım at!
+</footer>
+
+<!-- Popup -->
+<div class="popup" id="popup">
+    <div class="popup-content">
+        <h3>Kitap Ekle</h3>
+        <input type="text" id="bookTitle" placeholder="Kitap Adı">
+        <input type="text" id="bookImage" placeholder="Kapak Görseli URL">
+        <button onclick="addBook()">Ekle</button>
+        <button onclick="closePopup()">Kapat</button>
+    </div>
+</div>
 
 <script>
-  // Kalıcı tema
-  const themeBtn = document.getElementById('theme-btn');
-  if(localStorage.getItem('theme') === 'dark') document.body.classList.add('dark');
-  themeBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark');
-    localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark':'light');
-  });
-
-  // Kitap verileri JSON
-  const books = [
-    {
-      "title":"Kitap 1",
-      "author":"Yazar 1",
-      "description":"Kitap açıklaması 1",
-      "category":"Felsefe Rafı"
-    },
-    {
-      "title":"Kitap 2",
-      "author":"Yazar 2",
-      "description":"Kitap açıklaması 2",
-      "category":"Edebiyat Dünyası"
+    function openPopup() {
+        document.getElementById("popup").style.display = "flex";
     }
-    // Buraya yeni kitaplar JSON olarak eklenebilir
-  ];
-
-  const bookList = document.getElementById('book-list');
-  const searchInput = document.getElementById('search-input');
-  const categoryTitle = document.getElementById('category-title');
-
-  let currentCategory = "Tüm Kitaplar";
-
-  function renderBooks(filter="") {
-    bookList.innerHTML = "";
-    const filtered = books.filter(b=>{
-      const matchText = b.title.toLowerCase().includes(filter.toLowerCase()) || b.author.toLowerCase().includes(filter.toLowerCase());
-      const matchCat = (currentCategory==="Tüm Kitaplar") || b.category === currentCategory;
-      return matchText && matchCat;
-    });
-    filtered.forEach((book,index)=>{
-      const card = document.createElement('div');
-      card.className = "book-card";
-      card.innerHTML = `<strong>${book.title}</strong><br><small>${book.author}</small>`;
-      card.addEventListener('click', ()=>openModal(index));
-      bookList.appendChild(card);
-    });
-  }
-
-  searchInput.addEventListener('input', ()=>renderBooks(searchInput.value));
-
-  renderBooks();
-
-  // Modal + yıldız
-  const modal = document.getElementById('book-modal');
-  const modalTitle = document.getElementById('modal-title');
-  const modalAuthor = document.getElementById('modal-author');
-  const modalDesc = document.getElementById('modal-desc');
-  const modalStars = document.getElementById('modal-stars');
-
-  function openModal(index){
-    const book = books[index];
-    modalTitle.textContent = book.title;
-    modalAuthor.textContent = book.author;
-    modalDesc.textContent = book.description;
-    // Yıldızlar
-    Array.from(modalStars.children).forEach(star=>{
-      star.classList.remove('active');
-      star.onclick = ()=>{
-        const val = star.dataset.star;
-        Array.from(modalStars.children).forEach(s=>{
-          s.classList.toggle('active', s.dataset.star <= val);
-        });
-      }
-    });
-    modal.style.display = "flex";
-  }
-
-  document.getElementById('close-modal').addEventListener('click', ()=> modal.style.display="none");
-
-  // Kategori değiştirme fonksiyonu
-  function setCategory(cat){
-    currentCategory = cat;
-    categoryTitle.textContent = cat;
-    renderBooks(searchInput.value);
-  }
-
-  // Örnek kategori geçişi: Tıklama ile değiştirilebilir
-  // setCategory("Edebiyat Dünyası");
-
+    function closePopup() {
+        document.getElementById("popup").style.display = "none";
+    }
+    function addBook() {
+        const title = document.getElementById("bookTitle").value;
+        const image = document.getElementById("bookImage").value || "https://via.placeholder.com/150x200";
+        if (title) {
+            const bookList = document.getElementById("bookList");
+            const card = document.createElement("div");
+            card.classList.add("book-card");
+            card.innerHTML = `<img src="${image}" alt="${title}"><h4>${title}</h4>`;
+            bookList.appendChild(card);
+            closePopup();
+        }
+    }
 </script>
 
 </body>
